--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ display: flex;
     flex-direction: row; /* or column */
 }
 
+@media all and (min-width: 800px) {
+  img {
+    width:200px;
+  }
+
+
 /*makes links change color and become more interactive*/
 a:link    { color:#000000;}
 a:visited { color:#242e0f;   }
